--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.3",
+    "@react-three/drei": "^3.11.0",
+    "cannon": "^0.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "react-three-fiber": "^5.3.19",
+    "three": "^0.126.1"
   },
   "scripts": {
     "start": "react-scripts start",
